<resources>
    <string name="app_name">Chat</string>
    <string name="activity_login__edt_username_hint">请输入用户名</string>
    <string name="activity_login__edt_password_hint">请输入密码</string>
    <string name="activity_login__btn_login">登陆</string>
    <string name="activity_login__tv_register_1">还没有账号?</string>
    <string name="activity_login__tv_register_2"><![CDATA[立即注册 >]]></string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="username_cannot_be_null">用户名不能为空</string>
    <string name="password_cannot_be_null">密码不能为空</string>
    <string name="username_or_password_error">帐号或密码错误</string>
<<<<<<< HEAD
    <string name="on_loging">正在登陆</string>
=======
    <string name="activity_main__tab_btn_message">会话</string>
    <string name="activity_main__tab_btn_contact">联系人</string>
    <string name="activity_main__tab_btn_setting">设置</string>
>>>>>>> a4debcfffd2c7257de263b8c605df30cedc4599a
</resources>
