<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/ll_tab_btn_container"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_tab_message"
                style="@style/activity_main__tab_btn"
                android:drawableTop="@drawable/tab_btn_message_selector"
                android:scaleType="matrix"
                android:text="@string/activity_main__tab_btn_message" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_tab_contact"
                style="@style/activity_main__tab_btn"
                android:drawableTop="@drawable/tab_btn_message_selector"
                android:text="@string/activity_main__tab_btn_contact" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_tab_setting"
                style="@style/activity_main__tab_btn"
                android:drawableTop="@drawable/tab_btn_message_selector"
                android:text="@string/activity_main__tab_btn_setting" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_tab_btn_container" />

</RelativeLayout>
